--- a/styling.css
+++ b/styling.css
@@ -1,9 +1,66 @@
 :root {
   font-family:"garamond", baskerville, "baskerville old face", "hoefler text", "times new roman", serif;
-  font-size: 12.4em;
-  line-height: 1em;
+  font-size: 1.4em;
+  line-height: 1.5em;
 }
 
 html* {
   box-sizing: border-box;
+}
+.main-nav ul {
+  list-style-type: none;
+  padding:.5em 0em .5em 0em;
+  font-family: 'Quintessential', cursive;
+  font-size: 1.2em;
+  background-color:#000000;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.main-nav a {
+    color: #ffffff;
+}
+.account-nav ul {
+  list-style-type: none;
+  font-size: .6em;
+  font-family: 'Quintessential', cursive;
+  background-image: url(annie-spratt-201791-unsplash.jpg);
+  background-position: left;
+  background-size: cover;
+  display:flex;
+  flex-direction: row;
+  justify-content:flex-end;
+}
+.login {
+  margin: 0em .5em 0em .5em;
+}
+.footer-nav ul {
+  list-style-type: none;
+  font-family: 'Quintessential', cursive;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+}
+.contact {
+  margin-left: .5em;
+}
+.site-name {
+  font-family:'Cinzel Decorative', cursive;
+  font-size: 1.3em;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: center;
+}
+a:link {
+  text-decoration: none;
+}
+.heading {
+  font-family: "Cinzel Decorative", cursive;
+  font-size: 1.1em;
+  margin: 1.5em 0em 0em 0em;
+}
+.main p {
+  margin: 0 0 0 0;
 }
