--- a/styling.css
+++ b/styling.css
@@ -12,7 +12,6 @@ html* {
   padding:.5em 0em .5em 0em;
   font-family: 'Quintessential', cursive;
   font-size: 1.2em;
-  background-color:#000000;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -24,9 +23,6 @@ html* {
   list-style-type: none;
   font-size: .6em;
   font-family: 'Quintessential', cursive;
-  background-image: url(annie-spratt-201791-unsplash.jpg);
-  background-position: left;
-  background-size: cover;
   display:flex;
   flex-direction: row;
   justify-content:flex-end;
@@ -34,9 +30,17 @@ html* {
 .login {
   margin: 0em .5em 0em .5em;
 }
+.account-nav a:link {
+  color: #ffffff;
+}
+.account-nav a:visited {
+  color: #ffffff;
+}
+
 .footer-nav ul {
   list-style-type: none;
   font-family: 'Quintessential', cursive;
+  padding: 0;
   display:flex;
   flex-direction: row;
   justify-content: center;
@@ -45,12 +49,18 @@ html* {
 .contact {
   margin-left: .5em;
 }
+.footer-nav a:link {
+  color: #000000;
+}
+.footer-nav a:visited {
+  color: #000000;
+}
+
 .site-name {
   font-family:'Cinzel Decorative', cursive;
   font-size: 1.3em;
+  color: #ffffff;
   display: flex;
-  flex-direction: column;
-  align-content: flex-start;
   justify-content: center;
 }
 a:link {
@@ -63,4 +73,21 @@ a:link {
 }
 .main p {
   margin: 0 0 0 0;
+}
+.header {
+  position: relative;
+  background-image: url(annie-spratt-201791-unsplash.jpg);
+  background-position: right;
+  background-size: cover;
+}
+.header:after {
+  content: " ";
+ z-index: 1;
+ display: block;
+ position: absolute;
+ height: 100%;
+ top: 0;
+ left: 0;
+ right: 0;
+ background: #00000064;
 }
