Optimized image-size/updated image url

--- a/styling.css
+++ b/styling.css
@@ -76,7 +76,7 @@ a:link {
 }
 .header {
   position: relative;
-  background-image: url(annie-spratt-201791-unsplash.jpg);
+  background-image: url(Lilies.jpg);
   background-position: right;
   background-size: cover;
 }
