--- a/styling.css
+++ b/styling.css
@@ -73,6 +73,12 @@ a:link {
 }
 .main p {
   margin: 0 0 0 0;
+  padding-left: .5em;
+  padding-right: .5em;
+}
+.main h2 {
+  padding-left: .5em;
+  padding-right: .5em;
 }
 .header {
   position: relative;
@@ -90,4 +96,16 @@ a:link {
  left: 0;
  right: 0;
  background: #00000064;
+}
+
+@media only screen and
+(min-width: 850px) {
+  .main p {
+    max-width: 98%;
+    font-size: 1.5em;
+    line-height: 1.6em;
+  }
+  .main h2 {
+    font-size: 1.6em;
+  }
 }
