--- a/styling.css
+++ b/styling.css
@@ -108,4 +108,10 @@ a:link {
   .main h2 {
     font-size: 1.6em;
   }
+  .site-name {
+    font-size: 1.9em;
+  }
+  .main-nav: {
+    font-size: 1.4em;
+  }
 }
