--- a/styling.css
+++ b/styling.css
@@ -12,6 +12,7 @@ html* {
   padding:.5em 0em .5em 0em;
   font-family: 'Quintessential', cursive;
   font-size: 1.2em;
+  background-color: #00000064;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -85,17 +86,6 @@ a:link {
   background-image: url(Lilies.jpg);
   background-position: right;
   background-size: cover;
-}
-.header:after {
-  content: " ";
- z-index: 1;
- display: block;
- position: absolute;
- height: 100%;
- top: 0;
- left: 0;
- right: 0;
- background: #00000064;
 }
 
 @media only screen and
