--- a/styling.css
+++ b/styling.css
@@ -71,15 +71,24 @@ a:link {
   font-family: "Cinzel Decorative", cursive;
   font-size: 1.1em;
   margin: 1.5em 0em 0em 0em;
+  padding-left: .5em;
 }
 .main p {
   margin: 0 0 0 0;
   padding-left: .5em;
   padding-right: .5em;
 }
-.main h2 {
+.main h3 {
   padding-left: .5em;
   padding-right: .5em;
+}
+.main h4 {
+  padding-left: 1em;
+  padding-right: :1em;
+}
+.main h5 {
+  padding-left: 2em;
+  padding-right: 2em;
 }
 .header {
   position: relative;
