--- a/styling.css
+++ b/styling.css
@@ -72,6 +72,9 @@ a:link {
   font-size: 1.1em;
   margin: 1.5em 0em 0em 0em;
 }
+.other {
+  padding-left: .5em;
+}
 .text {
   margin: 0 0 0 0;
   padding-left: .5em;
